--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ version: maven-version-number
 description: A plugin that gets notified when votes are made for the server on toplists.
 authors: [blakeman8192, Kramer, tuxed]
 commands:
-   reload:
+   nvreload:
       description: This command reloads the NuVotifier Config
       usage: /nvreload
       permission: nuvotifier.reload
